# token-opt

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: run_bench.py
benchmarks/corpus/: config_nested.json  meeting.srt  report.html  sample.py  thread.eml  users_uniform.json
tests/: test_compress_code.py  test_compress_data.py  test_compress_doc.py  test_compress_email.py  test_compress_generic.py  test_compress_transcript.py  test_cost.py  test_counting.py  test_pipe.py
tokenopt/: __init__.py  cli.py  cost.py  detect.py  pipe.py  prices.json  report.py
tokenopt/compress/: __init__.py  code.py  data.py  doc.py  email.py  generic.py  transcript.py
tokenopt/counting/: __init__.py  base.py  claude.py  gemini.py  openai.py
